# ai-assistant

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  example.txt  pyproject.toml  refund.aiff  sample.aiff  sample2.aiff
alembic/: env.py
alembic/versions/: 202605120001_create_initial_tables.py  202607010001_add_voice_metadata_to_agent_runs.py
app/: main.py
app/agents/: __init__.py  base.py  customer_analysis_agent.py  guardrails.py  langchain_support_agent.py  rag_agent.py  schemas.py  state.py  summarization_agent.py  supervisor.py  support_agent.py
app/api/routes/: chat.py  chat_langchain.py  documents.py  llm.py  voice.py
app/core/: config.py  tracing.py
app/evaluation/: __init__.py  evaluate_intent_routing.py  evaluate_multi_agent.py  intent_dataset.jsonl  multi_agent_dataset.jsonl
app/integrations/telegram/: bot.py  client.py  formatters.py  handlers.py  router.py  schemas.py  service.py
app/models/: __init__.py  agent.py  conversation.py  document.py
app/routing/: __init__.py  classifier.py  context_router.py  llm_router.py  rule_router.py  schemas.py
app/schemas/: __init__.py  chat.py  document.py  vector.py
app/services/: __init__.py  chat_workflow_service.py  chunking_service.py  document_ingestion_service.py  document_parser.py  embedding_service.py  langchain_rag_service.py  llm_service.py  rag_service.py
app/services/tools/: __init__.py  customer_tools.py  order_tools.py
app/tools/: __init__.py  agent_tools.py  customer_tools.py
app/vectorstore/: __init__.py  qdrant_store.py
app/voice/: __init__.py  audio_converter.py  schemas.py  service.py  speech_to_text.py
docs/: PROJECT_FLOW.md  SupportOps_AI_Agent_Architecture_Flow.docx
scripts/: run_telegram_bot.py
test_docs/: account_policy.txt  delivery_policy.txt  payment_policy.txt  promo_policy.txt  refund_policy.txt  warranty_policy.txt
tests/: test_chat_routing.py  test_chunking_service.py  test_document_lifecycle.py  test_document_parser.py  test_embedding_service.py  test_health.py  test_intent_routing.py  test_langchain_rag.py  test_llm_service.py  test_multi_agent.py  test_qdrant_store.py  test_qdrant_store_integration.py  test_support_agent.py  test_telegram_integration.py  test_telegram_webhook.py  test_voice.py
